<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_201"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_layout_nickname_email"
        style="@style/default_input"
        android:layout_marginTop="120dp"
        android:theme="@style/text_label_white">
        android:inputType="text"

        <EditText
            android:id="@+id/input_nickname_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_nickname_email"
            android:inputType="textEmailAddress"

            android:nextFocusDown="@+id/input_password" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_layout_password"
        style="@style/default_input"
        android:theme="@style/text_label_white">


        <EditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_password"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <!-- Signup Button -->
    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_signin"
        style="@style/standard_button"
        android:layout_width="fill_parent"
        android:layout_marginBottom="24dp"
        android:layout_marginTop="24dp"
        android:padding="12dp"
        android:text="@string/login_login" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="24dp"
        android:textSize="2100sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/link_registration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/login_need_registration"
            android:textColor="@color/background_main"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/separator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:text="|"
            android:textColor="@color/background_main"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/login_forgetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/login_forgot_password"
            android:textColor="@color/background_main"
            android:textSize="17sp" />

    </LinearLayout>

</LinearLayout>