...

    <!-- REGISTRATION -->
    <string name="registration_name">Benutzernamen</string>
    <string name="registration_email">E-Mail</string>
    <string name="registration_password">Passwort</string>
    <string name="registration_password_repeat">Passwort wiederholen</string>
    <string name="registration_account_exist">Bereits registriert? Login</string>
    <string name="registration_create_account">Account erstellen</string>
    <string name="registration_password_required">Ein Passwort wird benötigt</string>
    <string name="registration_password_no_match">Passwort stimmt nicht überein</string>
    <string name="registration_username_required">Ein Name wird benötigt</string>
    <string name="registration_email_required">E-Mail-Adresse wird benötigt</string>
    <string name="registration_nickname_mail_used">Benutzernamen oder E-Mail-Adresse wird bereits verwendet</string>
...
    <string name="registration_insert_email_address">E-Mail-Adresse eingeben</string>


    <!-- LOGIN -->
    <string name="login_nickname_email">Benutzernamen / E-Mail</string>
    <string name="login_password">Passwort</string>
    <string name="login_login">Login</string>
    <string name="login_failure">Login fehlgeschlagen</string>
    <string name="login_need_registration">Neuen Account erstellen</string>
    <string name="login_forgot_password">Passwort vergessen?</string>
    <string name="login_instagram">Anmelden mit Instagram</string>
    <string name="login_facebook">Anmelden mit Facebook</string>


    <!-- POI -->
    <string name="poi_fragment_textview_title">Titel</string>
...
    <string name="poi_fragment_success_delete">POI wurde erfolgreich gelöscht</string>
    <string name="poi_fragment_fail_delete">POI löschen fehlgeschlagen</string>
    <string name="poi_successful_saving">POI wurde erfolgreich gespeichert</string>
    <string name="forgot_password_btn">Passwort zurücksetzen</string>
    <string name="forgot_password_reset_mail_success">Eine E-Mail fürs Zurücksetzen des Passwortes wurde erfolgreich versendet</string>
    <string name="forgot_password_reset_mail_fail">Fehler beim zurücksetzen des Passwortes</string>
    <string name="forgot_password_link_login">Zurück zum Login</string>
    <string name="registration_email_confirmation">Eine E-Mail wurde verschickt. Bitte bestätigen vor dem einloggen</string>


    <!-- MAP TYPE -->
    <string name="map_type_terrain">Terrain</string>
    <string name="map_type_default">Standard</string>
...
