<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_two_and_inactive"
    android:padding="24dp">

    <LinearLayout
...
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/disclaimer_accepted_check_box"
                    android:text="@string/user_guide_accept_disclaimer" />
            </RelativeLayout>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_go_to_map"
                style="@style/standard_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:padding="12dp"
                android:text="@string/msg_lets_go" />
...
