<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_201"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="150dp">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_forgot_pw"
        style="@style/TextInputLayout">

        <EditText
            android:id="@+id/input_forgot_pw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/registration_email"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>

    <!-- Reset Password Button -->
    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_forgot_pw"
        style="@style/standard_button"
        android:layout_width="fill_parent"
        android:layout_marginBottom="24dp"
        android:layout_marginTop="48dp"
        android:padding="12dp"
        android:text="@string/forgot_password_btn" />

    <TextView
        android:id="@+id/link_login"
        style="@style/h3.White"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        android:text="@string/forgot_password_link_login" />

</LinearLayout>